# CloudPSS_skillhub

./: .cloudpss_token_internal  .gitignore  AvailabeTestCases.md  CLAUDE.md  FULL_FRAMEWORK_AUDIT.md  IMPLEMENTATION_MANUAL.md  PHASE_1_2_REVIEW.md  PROBLEMATIC_TESTS_LIST.md  PROGRESS_REPORT_DAY1.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  REPAIR_PLAN.md  REPAIR_PLAN_V2.md  REPAIR_PLAN_V3.md  WORKFLOW.md  portal_case_detail.md  portal_result_detail.md  portal_snapshot.md  portal_tasks.md  pyproject.toml  pytest.ini  run_all_tests.py  tmp_plan_record.md
.firecrawl/: capacity-factor.json  iec-60255-inverse-curves.json  thd-formula.json
.gstack/: config.yaml
.omx/: metrics.json
.openspec/: QUICKSTART.md  proposal.md
.playwright-mcp/: page-2026-05-02T11-44-27-474Z.yml  page-2026-05-02T11-46-33-226Z.yml  page-2026-05-02T11-48-00-223Z.yml  page-2026-05-02T11-48-30-089Z.yml  page-2026-05-02T14-27-16-189Z.yml  page-2026-05-02T14-28-58-040Z.yml  page-2026-05-02T14-36-51-856Z.yml  page-2026-05-02T14-38-25-417Z.yml  page-2026-05-02T15-05-45-765Z.yml  page-2026-05-03T01-37-42-083Z.yml  page-2026-05-03T01-38-41-063Z.yml  page-2026-05-03T01-39-39-328Z.yml  page-2026-05-03T01-40-59-491Z.yml  page-2026-05-03T01-51-50-454Z.yml
cloudpss_skills/: __init__.py  __main__.py
cloudpss_skills_v2/: __init__.py  __main__.py  base.py  demo_new_architecture.py  metadata.py  registry.py
cloudpss_skills_v3/: PROJECT_COMPLETION.md  README.md  REVIEW_REPORT.md  __init__.py
cloudpss_skills_v4/: README.md  __init__.py
config/: batch_task_manager.yaml  component_catalog.yaml  disturbance_severity.yaml  dudv_curve.yaml  hdf5_export.yaml  loss_analysis.yaml  model_builder.yaml  protection_coordination.yaml  reactive_compensation_design.yaml  reactive_compensation_design_capacitor.yaml  reactive_compensation_design_svc.yaml  reactive_compensation_design_svg.yaml  report_generator.yaml  validate_test_models.yaml  vsi_weak_bus.yaml
docs/: CLOUDPSS_MASTER_ORGANIZER_PLAN.md  IMPLEMENTATION_PLAN.md  PORTAL_DESIGN.md  PORTAL_HANDOFF_2026-05-03.md  PORTAL_UI_SPEC.md  README.md  SKILL_DEVELOPMENT_GUIDE.md  SKILL_USAGE_GUIDE.md  STRATEGIC_VISION.md  api-inventory.md  component_metadata_architecture.md  component_metadata_implementation_tasks.md  component_metadata_system_design.md  smoke_test_improvement_checklist.md  v2_FIX_PLAN.md  v2_FIX_SUMMARY.md  v2_IMPROVEMENT_PLAN.md  v2_LAYERED_AUDIT_REPORT.md
scripts/: create_test_models.py  fix_bare_except.py  fix_bare_exceptions.py  fix_empty_pass.py  fix_failure_paths.py  fix_skill_schema.py  fix_skill_schema_v2.py  fix_todo_exceptions.py  generate_default_config.py  generate_integration_test.py  validate_all_models.py  validate_schema_defaults.py  verify_test_models.py
tests/: README.md  ULTIMATE_FINAL_REPORT.py  complete_real_test.py  conftest.py  final_real_test.py  final_report.py  ieee3_emt_real_test.py  integration_test_full.py  integration_test_with_token.py  param_scan_emt_test.py  postprocess_real_test.py  prompt_driven_test_framework.py  remaining_skills_real_test.py  result_compare_direct_test.py  test_all_skills_real.py  test_auth_utils_unit.py  test_auto_channel_setup_integration.py  test_auto_channel_setup_unit.py  test_auto_loop_breaker_integration.py  test_auto_loop_breaker_permission_unit.py  test_auto_loop_breaker_unit.py  test_batch_powerflow_integration.py  test_batch_powerflow_unit.py  test_batch_task_manager_integration.py  test_cloudpss_skills_v3_vsc_solver.py  test_cloudpss_skills_v4_vsc_solver.py  test_compare_visualization_integration.py  test_compare_visualization_unit.py  test_component_catalog_integration.py  test_component_catalog_unit.py  test_comtrade_export_integration.py  test_config_batch_runner_integration.py  test_config_batch_runner_unit.py  test_contingency_analysis_integration.py  test_contingency_analysis_unit.py  test_disturbance_severity_integration.py  (+81 more)
(+751 files in other folders)
