[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudpss-skillhub"
version = "1.0.0"
description = "CloudPSS SkillHub - 电力系统仿真技能中心，48 个专业仿真技能"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chen Ying", email = "chenyingthu@example.com"}
]
keywords = ["cloudpss", "power system", "simulation", "emt", "power flow", "skillhub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "cloudpss>=4.5.28",
    "pyyaml>=5.4",
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "requests>=2.25",
    "networkx>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.9",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]

[project.urls]
Homepage = "https://github.com/chenyingthu/CloudPSS_skillhub"
Documentation = "https://github.com/chenyingthu/CloudPSS_skillhub/tree/main/docs"
Repository = "https://github.com/chenyingthu/CloudPSS_skillhub"
Issues = "https://github.com/chenyingthu/CloudPSS_skillhub/issues"

[project.scripts]
cloudpss-run = "cloudpss_skills.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudpss_skills*"]
exclude = ["cloudpss_skills_v4.papers*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests", "cloudpss_skills_v3/master_organizer/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
